# ners-verify

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  env_template  prestart.sh  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  api_pre_start.py  exceptions.py  main.py
app/api/: __init__.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: document_router.py  home_router.py  staff_router.py
app/core/: config.py
app/db/: __init__.py  base.py  base_class.py  init_db.py
app/domain/: __init__.py  constants.py  document.py  staff.py
app/models/: __init__.py  documents.py  documents_type.py  staff.py
app/repositories/: __init__.py  base.py  document_repository.py  staff_repository.py
app/schemas/: __init__.py  document_schema.py  staff_schema.py
app/services/: staff_service.py
app/services/ocr_processing/: __init__.py  ocr_entity.py  ocr_exceptions.py  ocr_schema.py  ocr_service.py
app/services/ocr_processing/providers/: __init__.py
app/services/ocr_processing/providers/verify/: __init__.py  verify_entity.py  verify_provider.py  verify_settings.py
migrations/: env.py
migrations/versions/: c684fcc2d488_initial_database_tables.py
tests/: conftest.py  factories.py
tests/app/api/: document_router_test.py  healthcheck_router_test.py  staff_router_test.py
tests/app/services/ocr_processing/: verify_service_test.py
